# Tinkflow

./: LICENSE  README.md
.github/workflows/: release.yml
Tinkflow_reasearch/: README.md
tinkflow/: .gitignore  package-lock.json  package.json
tinkflow/src/: App.css  App.tsx
tinkflow/src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.mac.plist  tauri.conf.json
tinkflow/src-tauri/.cargo/: config.toml
tinkflow/src-tauri/icons/: icon.icns
tinkflow/src-tauri/src/: audio.rs  context.rs  dictionary.rs  hotkey.rs  injector.rs  lib.rs  llm.rs  main.rs  settings.rs  whisper.rs
tinkflow/src/components/: Dashboard.tsx  ModelManager.tsx  Monitor.tsx  Onboarding.tsx  Settings.tsx  SettingsView.tsx  Sidebar.tsx  StatusIndicator.tsx
tinkflow/src/hooks/: useRecording.ts
tinkflow/src/styles/: dashboard.css  monitor.css  settings.css  sidebar.css
