[package]
name = "tinkflow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tinkflow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tinkflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.3"
enigo = "0.6.1"
global-hotkey = "0.7.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
tauri-plugin-sql = "2.3.2"
rubato = "0.14.0"
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"
hound = "3.5.1"
aho-corasick = "1"

# ── Windows-only dependencies ────────────────────────────────────────────────
[target.'cfg(target_os = "windows")'.dependencies]
# WinAPI for foreground-window title detection (context.rs)
winapi = { version = "0.3", features = ["winuser"] }
# GPU: Vulkan (active dev backend — CUDA disabled until drivers are fixed)
# To enable CUDA in prod: features = ["cuda", "vulkan"]
whisper-rs = { version = "0.15.1", features = ["vulkan"] }

# ── macOS-only dependencies ──────────────────────────────────────────────────
[target.'cfg(target_os = "macos")'.dependencies]
# Metal GPU acceleration on Apple Silicon / Intel Mac
whisper-rs = { version = "0.15.1", features = ["metal"] }

# ── Linux-only dependencies ──────────────────────────────────────────────────
[target.'cfg(target_os = "linux")'.dependencies]
# CPU-only (no GPU feature needed for Linux CI builds)
whisper-rs = { version = "0.15.1" }

# ── Desktop-only dependencies (Windows + macOS + Linux) ─────────────────────
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
